--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
+header {
+    display: flex;
+}
+
 div {
     display: flex;
     justify-content: center;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    float: left;
+}
+
+a {
+    display: block;
+    padding: 8px;
+    text-decoration: none;
+}
+
+footer {
+
 }
