--- a/style.css
+++ b/style.css
@@ -9,12 +9,17 @@ ul {
     padding: 0;
 }
 
-li a {
+li {
+    float: left;
+} 
+
+a {
     display: block;
     text-decoration: none;
-    color: #222;
+    color: #000;
     font-family: arial, sans-serif;
     font-size: 13px;
+    margin: 10px;
 }
 
 footer {
