--- a/style.css
+++ b/style.css
@@ -17,9 +17,28 @@ a {
     margin: 10px;
 }
 
+.logo {
+    margin: auto;
+    width: 272px;
+    padding: 50px 0;
+}
+
+.button {
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0px 16px;
+    line-height: 27px;
+    height: 36px;
+    text-align: center;
+}
+
 div {
     display: flex;
     justify-content: center;
+    padding: 10px;
 }
 
 footer {
